--- a/app/globals.css
+++ b/app/globals.css
@@ -1,17 +1,17 @@
-@import url('https://fonts.googleapis.com/css2?family=Special+Gothic+Expanded+One&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Special+Gothic+Expanded+One&display=swap");
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 :root {
-  --background: #D7FF7B;
+  --background: #d7ff7b;
   --foreground: #111111;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #D7FF7B;
+    --background: #d7ff7b;
     --foreground: #111111;
   }
 }
